# DataWareHouse

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  log.md  pyproject.toml
.cursor/commands/: prompt_database_change_automation.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
00_design/: ER図下書き.xlsx  api_library_documentation.md  api_specification.md  database_spec_with_timing.md  database_structure_detailed.md  ref_design_byGrok4_2.md  schema.sql  仕様書.md  質問リスト.md
02_core_lib_output/: WIN_20250731_15_21_33_Pro_analysis.csv  WIN_20250731_15_23_06_Pro_analysis.csv  WIN_20250731_15_24_06_Pro_analysis.csv  WIN_20250731_15_26_54_Pro_analysis.csv
02_core_lib_output/v1.0.0/1/: WIN_20250819_10_10_42_Pro_analysis.csv
02_core_lib_output/v1.0.0/2/: WIN_20250819_10_12_55_Pro_analysis.csv
02_core_lib_output/v1.0.0/3/: WIN_20250819_10_15_12_Pro_analysis.csv
02_core_lib_output/v1.0.0/4/: WIN_20250819_10_16_17_Pro_analysis.csv
03_algorithm_output/v0.1.1+fa5172ba/20250826-134236/: 3.csv
03_algorithm_output/v0.1.1+fa5172ba/20250826-155036/: 1.csv  2.csv  4.csv
04_evaluation_output/v0.1.1+fa5172ba/20250826-134236/: 1.csv  2.csv  4.csv  evaluation_report.md  evaluation_summary.json
04_evaluation_output/v0.1.1+fa5172ba/20250826-155036/: 3.csv  evaluation_report.md  evaluation_summary.json
_input/: 課題分析結果用テーブル.md
datawarehouse/: __init__.py  algorithm_api.py  analysis_api.py  analytics_api.py  cli.py  connection.py  core_lib_api.py  evaluation_api.py  exceptions.py  subject_api.py  tag_api.py  task_api.py  validation.py  video_api.py
docs/: api_reference.md
docs/specification/: api_specification.md  database_structure_detailed.md  package_structure_analysis.md  質問リスト.md
examples/: advanced_usage.py  basic_usage.py
scripts/: create_database.py  migrate_add_analysis_tables.py  migrate_add_evaluation_tables.py  query_db_structure.py  test_analysis_api.py
